# filesystem

./: .gitignore  AGENTS.md  Cargo.toml  Doxyfile  Makefile  README.md  filesystem.pro  filesystem.pro_bak  install.sh
app/: file-enumerator.h  filesyste-mmanager.cpp  filesyste-mmanager.h  main.cpp
app/common/: clipbord-utils.cpp  clipbord-utils.h  common.pri  file-operation-utils.cpp  file-operation-utils.h  file-utils.cpp  file-utils.h  file-watcher.cpp  file-watcher.h  global-settings.cpp  global-settings.h  password.cpp  password.h
app/controls/: advance-search-bar.cpp  advance-search-bar.h  advanced-location-bar.cpp  advanced-location-bar.h  controls.pri  default-previewpage-factory.cpp  default-previewpage-factory.h  default-previewpage.cpp  default-previewpage.h  directory-view-factory-manager2.cpp  directory-view-factory-manager2.h  file-label-box.cpp  file-label-box.h  headerbar.cpp  headerbar.h  icon-container.cpp  icon-container.h  label-box-delegate.cpp  label-box-delegate.h  location-bar.cpp  location-bar.h  menu-plugin-manager.h  navigation-bar.cpp  (+36 more)
configs/: filesystem.ini
crates/filesystem-gui/: Cargo.toml
crates/filesystem-gui/src/: app.rs  apps.rs  components.rs  config.rs  icons.rs  main.rs  model.rs  renderer.rs  style.rs  tasks.rs  utils.rs
data/: graceful-desktop-computer.desktop  graceful-desktop-desktop.desktop  graceful-desktop-home.desktop  graceful-desktop-trash.desktop  graceful-filesystem.desktop  org.graceful.desktop.gschema.xml  org.graceful.filesystem-manager.gschema.xml
docs/: overview-product-dev.md  overview-product.md
(+327 files in other folders)
