[package]
name = "filesystem-gui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
filesystem-core = { path = "../filesystem-core" }
filesystem-mime = { path = "../filesystem-mime" }
iced = { version = "0.14", default-features = false, features = [
    "advanced",
    "thread-pool",
    "svg",
    "tiny-skia",
    "wgpu",
    "x11",
    "wayland",
] }
resvg = { version = "0.45", default-features = false }
